--- a/app/css/app.css
+++ b/app/css/app.css
@@ -24,3 +24,8 @@
     display: flex;
     align-items: center;
 }
+
+.card {
+    background-color: #fff;
+    background-image: radial-gradient(ellipse at top right, #eee, transparent);
+}
